--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,7 +11,7 @@ COPY ./requirements.txt /backend/requirements.txt
 RUN pip install --no-cache-dir --upgrade -r /backend/requirements.txt
 
 # 
-COPY ./src /code/src
+COPY ./src /backend/src
 
 # 
 CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "80"]
