--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,17 +1,13 @@
-# 
-FROM python:3.12
+
+FROM python:3.12.6-slim
+
+COPY ./requirements.txt requirements.txt
 
 # 
-WORKDIR /backend
+RUN pip install --no-cache-dir --upgrade -r requirements.txt
 
 # 
-COPY ./requirements.txt /backend/requirements.txt
-
-# 
-RUN pip install --no-cache-dir --upgrade -r /backend/requirements.txt
-
-# 
-COPY ./src /backend/src
+COPY . .
 
 # 
 CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "80"]
