--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,13 +1,14 @@
 
 FROM python:3.12.6-slim
 
-COPY ./requirements.txt requirements.txt
+WORKDIR /backend
+COPY requirements.txt 
 
 # 
-RUN pip install --no-cache-dir --upgrade -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 # 
-COPY . .
+COPY src/
 
 # 
-CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "80"]
+CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
