--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,10 @@
 
 FROM python:3.12.6-slim
 
-WORKDIR /backend
 COPY requirements.txt requirements.txt 
 
 # 
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install -r requirements.txt
 
 # 
 COPY src/
