--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,7 +7,7 @@ COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 
 # 
-COPY src/
+COPY . .
 
 # 
 CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
