--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,14 +1,11 @@
 
-FROM python:3.12-slim
+FROM python:3.12.6-slim
 
 COPY requirements.txt requirements.txt 
 
 USER root
 
-RUN pip install pandas
-RUN pip install fastapi --index-url https://pypi.org/simple/
-RUN pip install scikit-learn
-RUN pip install uvicorn
+RUN pip install pandas scikit-learn fastapi uvicorn
 
 # 
 COPY . .
