--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,17 +1,17 @@
 FROM node:alpine as build
 
-WORKDIR app/frontend
+WORKDIR /usr/app/front
 
 COPY package.json package.json
 COPY package-lock.json package-lock.json
 
 RUN npm install -g npm@latest
 COPY . .
-RUN npm run dev
+RUN npm run build
 
 FROM nginx:stable-alpine
 
-COPY --from=build app/dist app/usr/share/nginx/html
-COPY --from=build nginx.conf app/etc/nginx/conf.d/default.conf
+COPY --from=build /dist /usr/share/nginx/html
+COPY --from=build nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 3000
 CMD [ "nginx", "-g", "daemon off;" ]
