--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,7 @@ events {
 http {
     server {
         listen       80;
-        server_name  87.228.37.133/; # <-- укажите ip адрес вашего сервера
+        server_name  87.228.37.133; # <-- укажите ip адрес вашего сервера
 
         location / {
             proxy_pass http://frontend:3000/;
